--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export",
-    "deploy": "npm run export && touch out/.nojekyll"
+    "deploy": "npm run build && touch out/.nojekyll && git add out/ && git commit -m 'Deploy to gh-pages' && git subtree push --prefix out origin gh-pages"
   },
   "keywords": [],
   "author": "",
